:bug: video wrap

--- a/src/resources/styles/page/home/_hero.scss
+++ b/src/resources/styles/page/home/_hero.scss
@@ -100,6 +100,7 @@
         top: 0;
         height: 180px;
         width: 100%;
+        transform: translateY(-2px);
         background-image: linear-gradient(
           to bottom,
           rgba(0, 0, 0, 0.7),
